--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,9 @@ languageCode = "en-us"
 theme        = "hello-friend-ng"
 paginate     = 10
 
+[author]
+  name = "Owen Halpert"
+
 [params]
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
@@ -14,6 +17,17 @@ paginate     = 10
 
   # Enable sharing buttons, if you like
   enableSharingButtons = true
+
+    [params.footer]
+    trademark = true
+    author = true
+    copyright = true
+
+    topText = []
+    bottomText = [
+      "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
+      "Made with &#10084; by <a href=\"https://github.com/owenhalpert\">Owen Halpert</a>"
+    ]
 
 
   [[params.social]]
@@ -27,6 +41,7 @@ paginate     = 10
   [[params.social]]
     name = "linkedin"
     url  = "https://www.linkedin.com/in/halpert/"
+
 
 [taxonomies]
     category = "blog"
