--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,9 @@ paginate     = 10
     author = true
     copyright = true
 
-    topText = []
+    topText = [
+      "download my <a href=\"/resume.pdf\">resume</a>"
+    ]
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
       "Made with &#10084; by <a href=\"https://github.com/owenhalpert\">Owen Halpert</a>"
