--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,6 +23,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: pip install markdown
+      - name: Generate blog
+        run: python3 generate_blog.py
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
